# Grupo-de-Rubik

./: CMakeLists.txt  README.md  main.cpp
include/: CuboRubik.h  EstadoCubo.h  Movimientos.h
src/: CuboRubik.cpp  EstadoCubo.cpp  Movimientos.cpp
